Fix Bug: play button overlaps the title on mobile #107

--- a/src/addons/compactPosters.scss
+++ b/src/addons/compactPosters.scss
@@ -133,3 +133,7 @@ $cardText-bg: rgb(0 0 0 / 0.7);
 		display: none;
 	}
 }
+
+.layout-mobile .cardOverlayButton {
+	bottom: 4.5em;
+}
